--- a/api/package.json
+++ b/api/package.json
@@ -13,6 +13,7 @@
     "mongoose": "^8.5.1",
     "multer": "^1.4.5-lts.1",
     "qr-image": "^3.2.0",
-    "qrcode": "^1.5.3"
+    "qrcode": "^1.5.3",
+    "nodemon": "3.1.7"
   }
 }
